# youth-hockey-eval-over-time

./: .gitignore  .pre-commit-config.yaml  .replit  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  IMPLEMENTATION_STATUS.md  README.md  VERIFICATION_TEST.txt  add_reset_fields.py  app.py  apply_migrations.py  apply_user_migration.py  config.py  eslint.config.js  fix_db.py  index.js  main.py  make_admin.py  package-lock.json  package.json  pyproject.toml  replit.nix  requirements.txt  reset_db.py  reset_transaction.py  run_coach_feedback_migration.py  run_migration.py  update_admin_status.py  update_password.py
.streamlit/: config.toml
attached_assets/: Pasted--Create-Your-Account-Full-Name-Ashley-Boehrig-Username-aboehrig-Password-Confirm-Password--1742084072510.txt  Pasted-Error-psycopg2-ProgrammingError-can-t-adapt-type-numpy-int64-SQL-SELECT-players-id-AS-players-1742149675508.txt  Pasted-Error-psycopg2-errors-UndefinedColumn-column-players-edge-control-does-not-exist-LINE-1-s-sho-1742142810636.txt  Pasted-Error-retrieving-peer-data-psycopg2-ProgrammingError-can-t-adapt-type-numpy-int64-SQL-SELECT--1742155398048.txt  Pasted-Error-retrieving-progress-data-psycopg2-ProgrammingError-can-t-adapt-type-numpy-int64-SQL-SEL-1742156031787.txt  Pasted-Off-Ice-Training-Tracker-Track-and-monitor-off-ice-development-activities-Training-Log-Record-Tr-1742146848308.txt  Pasted-To-ensure-your-youth-ice-hockey-player-assessment-and-skills-tracker-app-is-viable-appealing-and-f-1742084222374.txt  Pasted-To-ensure-your-youth-ice-hockey-player-assessment-and-skills-tracker-app-is-viable-appealing-and-f-1742141452843.txt  Pasted-sqlalchemy-exc-ProgrammingError-psycopg2-errors-UndefinedColumn-column-users-username-does-not-ex-1742083975076.txt  content-1742086963566.md
auth/: auth.py
components/: admin_dashboard.py  age_benchmarks.py  auth_interface.py  coach_feedback.py  development_charts.py  drill_recommendations.py  email_settings.py  feedback_templates.py  game_evaluation.py  landing_page.py  notification_settings.py  off_ice_training.py  onboarding.py  peer_comparison.py  player_profile.py  skill_assessment.py  stats_dashboard.py  team_dashboard.py  team_management.py  training_plans.py  user_profile.py  video_analysis.py
database/: __init__.py  config.py  models.py
hockey-eval-pwa/: .gitignore  README.md
hockey-eval-pwa/backend/: .env.example  README.md  pyproject.toml
hockey-eval-pwa/backend/alembic/: env.py
hockey-eval-pwa/backend/alembic/versions/: 001_initial_schema.py
hockey-eval-pwa/backend/app/: auth.py  database.py  main.py  main_old.py  models.py  pdf_generator.py  schemas.py
migrations/: env.py
styles/: custom.css
tests/: __init__.py  conftest.py  test_models.py  test_utils.py
utils/: data_generator.py  email_service.py  notification_service.py  pdf_report.py  showcase_data.py  token_manager.py  (+1 more)
(+30 files in other folders)
