[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask-mail>=0.10.0",
    "flask>=3.1.0",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "psycopg2-binary>=2.9.10",
    "streamlit>=1.42.2",
    "twilio>=9.4.6",
    "flask-login>=0.6.3",
    "sqlalchemy>=2.0.38",
    "werkzeug>=3.1.3",
    "reportlab>=4.3.1",
    "pdfkit>=1.0.0",
    "weasyprint>=64.1",
    "matplotlib>=3.10.1",
]

[dependency-groups]
dev = [
    "autoflake>=2.3.1",
    "black>=25.9.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]

[tool.black]
line-length = 88
target-version = ['py311']
extend-exclude = '''
/(
  # directories
  \.git
  | \.venv
  | migrations
  | __pycache__
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=. --cov-report=term-missing --cov-report=html"
