[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.119.1"}
psycopg = {extras = ["binary"], version = "^3.2.11"}
sqlalchemy = "^2.0.44"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
